cmake_minimum_required(VERSION 3.16)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(leetcode main.cpp leet.c isPrime.cpp leetCode.cpp InvertTree.h Node.h ListNode.h LinkedList.h bt_node.h t_node.h sll_node.h Stack.h Queue.h Deque.h Pair.h BT.h t_BST.h Solutions.h SudokuSolver.h TreeNode.h WordDictionary.h TrieNode.h GraphNode.h Graph.h RandomNode.h ParkingSystem.h TicTacToe.h)
